--- a/maiMobile-iOS/Base.lproj/Main.storyboard
+++ b/maiMobile-iOS/Base.lproj/Main.storyboard
@@ -206,11 +206,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y32-zx-e1G">
-                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <color key="backgroundColor" red="0.98431372549019602" green="0.86274509803921573" blue="0.1764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ndd-uw-IrP">
-                                <rect key="frame" x="20" y="72" width="560" height="29"/>
+                                <rect key="frame" x="20" y="28" width="560" height="29"/>
                                 <segments>
                                     <segment title="TUDO"/>
                                     <segment title="GNR"/>
@@ -222,7 +222,7 @@
                                 </connections>
                             </segmentedControl>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Zm2-hD-3BL">
-                                <rect key="frame" x="0.0" y="108" width="600" height="492"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -249,7 +249,6 @@
                             </mask>
                         </variation>
                     </view>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="mapView" destination="Zm2-hD-3BL" id="YEV-qG-YoX"/>
                         <outlet property="segmentedControl" destination="Ndd-uw-IrP" id="2lk-mg-FFr"/>
@@ -319,7 +318,7 @@
         <!--Security Table View Controller-->
         <scene sceneID="5l5-WL-N3R">
             <objects>
-                <viewController storyboardIdentifier="SecurityTableViewController" id="WL0-X0-bYi" customClass="SecurityTableViewController" customModule="maiMobile_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SecurityTableViewController" automaticallyAdjustsScrollViewInsets="NO" id="WL0-X0-bYi" customClass="SecurityTableViewController" customModule="maiMobile_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wsa-Up-DM5"/>
                         <viewControllerLayoutGuide type="bottom" id="9or-KE-qsX"/>
@@ -328,13 +327,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbq-j6-0au">
-                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbq-j6-0au" userLabel="MaskView">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fKx-Dc-hzp">
+                                        <rect key="frame" x="20" y="8" width="560" height="29"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28" id="Xyb-NI-ZeS"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="TUDO"/>
+                                            <segment title="GNR"/>
+                                            <segment title="PSP"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="barButtonItem:" destination="WL0-X0-bYi" eventType="valueChanged" id="0PH-n2-FsC"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
                                 <color key="backgroundColor" red="0.98431372549999996" green="0.86274509799999999" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="fKx-Dc-hzp" firstAttribute="top" secondItem="gbq-j6-0au" secondAttribute="top" constant="8" id="5gA-yp-c9j"/>
+                                    <constraint firstAttribute="bottom" secondItem="fKx-Dc-hzp" secondAttribute="bottom" constant="8" id="8i3-xx-lU2"/>
+                                    <constraint firstAttribute="trailing" secondItem="fKx-Dc-hzp" secondAttribute="trailing" constant="20" id="DXE-QV-FTf"/>
+                                    <constraint firstAttribute="height" constant="44" id="dpY-DU-ckB"/>
+                                    <constraint firstItem="fKx-Dc-hzp" firstAttribute="centerX" secondItem="gbq-j6-0au" secondAttribute="centerX" id="oez-sH-aJt"/>
+                                    <constraint firstItem="fKx-Dc-hzp" firstAttribute="leading" secondItem="gbq-j6-0au" secondAttribute="leading" constant="20" id="uyB-YK-Iva"/>
+                                </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="51" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2WX-lC-y07">
-                                <rect key="frame" x="0.0" y="108" width="600" height="492"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="536" id="hdB-RI-abx"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="pspCell" rowHeight="51" id="zNh-o5-gTr">
                                         <rect key="frame" x="0.0" y="28" width="600" height="51"/>
@@ -350,37 +376,29 @@
                                     <outlet property="delegate" destination="WL0-X0-bYi" id="Gqj-tq-mhN"/>
                                 </connections>
                             </tableView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fKx-Dc-hzp">
-                                <rect key="frame" x="20" y="72" width="560" height="29"/>
-                                <segments>
-                                    <segment title="TUDO"/>
-                                    <segment title="GNR"/>
-                                    <segment title="PSP"/>
-                                </segments>
-                                <connections>
-                                    <action selector="barButtonItem:" destination="WL0-X0-bYi" eventType="valueChanged" id="0PH-n2-FsC"/>
-                                </connections>
-                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="9or-KE-qsX" firstAttribute="top" secondItem="2WX-lC-y07" secondAttribute="bottom" id="5jz-3f-fZZ"/>
                             <constraint firstItem="2WX-lC-y07" firstAttribute="centerX" secondItem="EVa-VJ-Bzp" secondAttribute="centerX" id="At5-p5-Lao"/>
-                            <constraint firstItem="fKx-Dc-hzp" firstAttribute="top" secondItem="wsa-Up-DM5" secondAttribute="bottom" constant="8" id="EZK-KW-2e8"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="gbq-j6-0au" secondAttribute="trailing" constant="-20" id="IDd-Gu-lV0"/>
+                            <constraint firstItem="2WX-lC-y07" firstAttribute="top" secondItem="gbq-j6-0au" secondAttribute="bottom" id="KuL-ZU-RbJ"/>
                             <constraint firstItem="2WX-lC-y07" firstAttribute="leading" secondItem="EVa-VJ-Bzp" secondAttribute="leadingMargin" constant="-20" id="Kys-36-jFY"/>
-                            <constraint firstItem="fKx-Dc-hzp" firstAttribute="leading" secondItem="EVa-VJ-Bzp" secondAttribute="leadingMargin" id="P6o-XC-vc0"/>
-                            <constraint firstItem="fKx-Dc-hzp" firstAttribute="centerX" secondItem="EVa-VJ-Bzp" secondAttribute="centerX" id="d8b-pL-21t"/>
-                            <constraint firstItem="gbq-j6-0au" firstAttribute="leading" secondItem="EVa-VJ-Bzp" secondAttribute="leadingMargin" constant="-20" id="lqT-fn-FKo"/>
-                            <constraint firstItem="2WX-lC-y07" firstAttribute="top" secondItem="gbq-j6-0au" secondAttribute="bottom" id="pMD-mF-svc"/>
-                            <constraint firstItem="2WX-lC-y07" firstAttribute="top" secondItem="fKx-Dc-hzp" secondAttribute="bottom" constant="8" id="psn-bg-G0k"/>
-                            <constraint firstItem="fKx-Dc-hzp" firstAttribute="trailing" secondItem="EVa-VJ-Bzp" secondAttribute="trailingMargin" id="qfb-Nv-HMu"/>
+                            <constraint firstItem="gbq-j6-0au" firstAttribute="top" secondItem="wsa-Up-DM5" secondAttribute="bottom" id="N7Q-ej-0lx"/>
+                            <constraint firstItem="gbq-j6-0au" firstAttribute="leading" secondItem="EVa-VJ-Bzp" secondAttribute="leadingMargin" constant="-20" id="gcP-ON-CtH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gbq-j6-0au" secondAttribute="trailing" constant="-20" id="oKD-ea-dor"/>
+                            <constraint firstItem="2WX-lC-y07" firstAttribute="top" secondItem="gbq-j6-0au" secondAttribute="bottom" constant="8" id="pMD-mF-svc"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2WX-lC-y07" secondAttribute="trailing" constant="-20" id="sJS-DW-QNq"/>
-                            <constraint firstItem="gbq-j6-0au" firstAttribute="top" secondItem="wsa-Up-DM5" secondAttribute="bottom" id="yhi-Qb-4kZ"/>
+                            <constraint firstItem="2WX-lC-y07" firstAttribute="top" secondItem="EVa-VJ-Bzp" secondAttribute="top" constant="72" id="zSr-pz-HzM"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="pMD-mF-svc"/>
+                                <exclude reference="zSr-pz-HzM"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="maskView" destination="gbq-j6-0au" id="vIR-2g-eD9"/>
                         <outlet property="securityTableView" destination="2WX-lC-y07" id="XqU-4f-5CW"/>
                         <outlet property="segmentedControl" destination="fKx-Dc-hzp" id="Ybc-HI-BRO"/>
                     </connections>
